# fastexchange

./: .envrc  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: index.md  modules.md
examples/: basic1.py  basic2.py  basic3.py
fastexchange/: __init__.py  currency.py  exceptions.py  http.py  utils.py
fastexchange/converter/: base_client.py  clients.py  mappings.py
fastexchange/crypto/: schema.py  types.py  usdt.py
tests/: test_currencies.py
